--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="http://yui.yahooapis.com/3.18.1/build/cssreset/cssreset-min.css">
         <link rel="stylesheet" type="text/css" href="style/master.css">
-
+        
+        <script type="text/javascript" src="http://www.flotcharts.org/flot/jquery.js"></script>
+        <script type="text/javascript" src="http://www.flotcharts.org/flot/jquery.flot.js"></script>
         <script type="text/javascript" src="script/app.js"></script>
     </head>
     <body>
@@ -17,6 +19,6 @@
             Milestones: <select id="milestoneSelect"></select>
         </div>
 
-        <div id="graph"></div>
+        <div id="graph" style="height: 400px; width: 80%; border: solid 1px red;"></div>
     </body>
 </html>
