Add provision for tasks not yet completed

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
         
         <script type="text/javascript" src="http://www.flotcharts.org/flot/jquery.js"></script>
         <script type="text/javascript" src="http://www.flotcharts.org/flot/jquery.flot.js"></script>
+        <script type="text/javascript" src="http://www.flotcharts.org/flot/jquery.flot.time.js"></script>
         <script type="text/javascript" src="script/app.js"></script>
     </head>
     <body>
