Add support for multiple milestones Allow selection of multiple milestones Only return completed milestones

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             Projects: <select id="projectSelect"></select>
         </div>
         <div>
-            Milestones: <select id="milestoneSelect"></select>
+            Milestones: <select id="milestoneSelect" multiple="multiple" style="height: 60px;"></select>
         </div>
 
         <div id="graph" style="height: 400px; width: 80%; border: solid 1px red;"></div>
