--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <script type="text/javascript" src="http://www.flotcharts.org/flot/jquery.flot.js"></script>
         <script type="text/javascript" src="http://www.flotcharts.org/flot/jquery.flot.time.js"></script>
         <script type="text/javascript" src="script/gitlabAPI.js"></script>
+        <script type="text/javascript" src="script/utils.js"></script>
         <script type="text/javascript" src="script/app.js"></script>
     </head>
     <body>
