Add spinner for loading Show spinner for loading of all items Fix the graph to continue until today (show flat line)

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
         <div id="projectContainer">
             Select a project: <br /> 
             <select id="projectSelect"></select>
+            <img alt="Pete spinner" id="spinner" src="spinner.gif" />
         </div>
+
+
         <div id="milestonesContainer">
             Select the project milestones: <br /> 
             <select id="milestoneSelect" multiple="multiple"></select>
